Remove novalidate for testing

--- a/html/offerForm.html.twig
+++ b/html/offerForm.html.twig
@@ -21,7 +21,7 @@
         </div>
         <div class="col-md-4">
             <h1>Aanbod</h1>
-            <form method="post" novalidate>
+            <form method="post">
                 <div class="form-group">
 					{% set firstnameIsInvalid = errors.firstname is defined %}
                     <label for="exampleFormControlInput1">Voornaam</label>
