--- a/html/requestForm.html.twig
+++ b/html/requestForm.html.twig
@@ -12,7 +12,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <form method="post" novalidate>
+            <form method="post">
                 <div class="form-group">
                     {% set firstnameIsInvalid = errors.firstname is defined %}
                     <label for="firstname">Voornaam</label>
